aws_security_group.control_center.tf
resource "aws_security_group" "control-center" {
  # checkov:skip=CKV_AWS_382: Unrestricted outbound access required for resource functionality
  name = "CONTROL-CENTER"

  description = "control-center security group - Managed by Terraform"
  vpc_id      = var.vpc_id

  # web ui
  ingress {
    description = "Webui"
    from_port   = 9021
    to_port     = 9021
    protocol    = "TCP"
    cidr_blocks = [var.vpc_cidr]
  }

  # from bastion
  ingress {
    description     = "Allow SSH"
    from_port       = 22
    to_port         = 22
    protocol        = "TCP"
    security_groups = [aws_security_group.bastions.id]
  }

  egress {
    description = "Allow outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    #tfsec:ignore:AWS009
    cidr_blocks = var.egress_range
  }


}
